--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h2{
+h1{
 	text-align: center;
+}
+img{
+	max-width:100%;
+}
+div{
+	height: 200px;
+	width: 50%;
+}
+#small{
+	height: 100px;
+	width:50%;
 }
